# systemics

./: .gitignore  Makefile  README.md  latexmkrc  main.tex
.github/workflows/: README.md  build-book.yml
book/: Makefile  main.tex
book/bib/: references.bib
book/chapters/: ch00-meta.tex  ch01-motivation.tex  ch02-universes-judgments.tex  ch03-core-axioms.tex  ch04-process-algebra-object.tex  ch05-laws-of-composition.tex  ch06-contract-algebra.tex  ch07-execution-semantics.tex  ch08-replay-verification.tex  ch09-observables-equivalence.tex  ch10-pipeline-syntax.tex  ch11-rewrite-normal-forms.tex  ch12-stability-enrichment.tex  ch13-capacity-enrichment.tex  ch14-evidence-enrichment.tex  ch15-exemplar-method.tex
book/parts/: part1-core.tex  part2-algebra.tex  part3-semantics.tex  (+3 more)
exemplars/: README.md
lib/: README.md  pyproject.toml
lib/src/systemics/: __init__.py  theory.py
lib/src/systemics/contracts/: __init__.py  cseq.py
lib/src/systemics/core/: __init__.py  contract.py  kernel.py  trace.py
lib/src/systemics/enrich/: __init__.py
lib/src/systemics/enrich/capacity/: __init__.py
lib/src/systemics/enrich/evidence/: __init__.py
lib/src/systemics/enrich/stability/: __init__.py
lib/src/systemics/expr/: __init__.py
lib/src/systemics/kit/: __init__.py  composition_kit.py
lib/src/systemics/laws/: __init__.py
lib/src/systemics/observables/: __init__.py
lib/src/systemics/semantics/: __init__.py  seq.py
lib/tests/: test_imports.py
tools/: build_all_exemplars.py  build_book.sh  build_diagrams.sh  build_exemplar.py  release_check.sh
(+53 files in other folders)
